--- a/codebase/apps/radar/src/Lucid/Makefile.qmake
+++ b/codebase/apps/radar/src/Lucid/Makefile.qmake
@@ -78,7 +78,6 @@ SOURCES       = Args.cc \
 		SymprodRenderObj.cc \
 		TimeControl.cc \
 		TimeList.cc \
-		TimePlot.cc \
 		VertWidget.cc \
 		VertWindow.cc \
 		VlevelManager.cc \
@@ -183,7 +182,6 @@ OBJECTS       = Args.o \
 		SymprodRenderObj.o \
 		TimeControl.o \
 		TimeList.o \
-		TimePlot.o \
 		VertWidget.o \
 		VertWindow.o \
 		VlevelManager.o \
@@ -414,7 +412,6 @@ DIST          = /usr/lib64/qt6/mkspecs/features/spec_pre.prf \
 		SymprodRenderObj.hh \
 		TimeControl.hh \
 		TimeList.hh \
-		TimePlot.hh \
 		VertWidget.hh \
 		VertWindow.hh \
 		VlevelManager.hh \
@@ -464,7 +461,6 @@ DIST          = /usr/lib64/qt6/mkspecs/features/spec_pre.prf \
 		SymprodRenderObj.cc \
 		TimeControl.cc \
 		TimeList.cc \
-		TimePlot.cc \
 		VertWidget.cc \
 		VertWindow.cc \
 		VlevelManager.cc \
@@ -822,8 +818,8 @@ distdir: FORCE
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents resources.qrc $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib64/qt6/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents Args.hh GuiManager.hh Cdraw_P.hh Cgui_P.hh Cimages_P.hh Croutes_P.hh Csyprod_P.hh Cterrain_P.hh FieldTableItem.hh HorizWidget.hh LatLonBox.hh LegacyParams.hh Lucid.hh MapMenuItem.hh MetRecord.hh Params.hh ProdMenuItem.hh Product.hh ProductMgr.hh RenderContext.hh ScaledLabel.hh SiiPalette.hh SymprodRender.hh SymprodRenderObj.hh TimeControl.hh TimeList.hh TimePlot.hh VertWidget.hh VertWindow.hh VlevelManager.hh WayPts.hh WindMenuItem.hh WorldPlot.hh XyBox.hh ZoomMenuItem.hh cidd.h cidd_colorscales.h cidd_contours.h cidd_data_io.h cidd_dpd.h cidd_funcs.h cidd_layers.h cidd_legend.h cidd_macros.h cidd_maps.h cidd_movies.h cidd_params.h cidd_products.h cidd_structs.h cidd_windows.h cidd_winds.h $(DISTDIR)/
-	$(COPY_FILE) --parents Args.cc GuiManager.cc Cdraw_P.cc Cgui_P.cc Cimages_P.cc Croutes_P.cc Csyprod_P.cc Cterrain_P.cc FieldTableItem.cc HorizWidget.cc LatLonBox.cc LegacyParams.cc Lucid.cc Main.cc MapMenuItem.cc MetRecord.cc Params.cc ProdMenuItem.cc Product.cc ProductMgr.cc RenderContext.cc ScaledLabel.cc SymprodRender.cc SymprodRenderObj.cc TimeControl.cc TimeList.cc TimePlot.cc VertWidget.cc VertWindow.cc VlevelManager.cc WayPts.cc WindMenuItem.cc WorldPlot.cc XyBox.cc ZoomMenuItem.cc cidd_coords.cc cidd_font.cc cidd_init.cc cidd_remote_commands.cc cidd_reset.cc contours.cc graphic_canvas_events.cc graphic_canvas_events_bkwd.cc graphic_compute.cc graphic_cross_section.cc graphic_dump_image.cc graphic_manage.cc graphic_margin_events.cc graphic_panel.cc graphic_reset.cc graphic_resize.cc graphic_xsect_canvas_events.cc graphic_xsect_resize.cc graphic_zoom.cc gui_destroy.cc gui_label_frame.cc gui_modify.cc movie_control.cc movie_frame_retrieve.cc movie_frame_save.cc process_args.cc render_azimuths.cc render_bottom_margin.cc render_cart_grid.cc render_cbar.cc render_click_marks.cc render_distorted_grid.cc render_filled_contours.cc render_filled_image.cc render_ht_sel.cc render_left_margin.cc render_legends.cc render_line_contours.cc render_margins.cc render_movie_frame.cc render_overlays.cc render_polar_grid.cc render_products.cc render_range_rings.cc render_right_margin.cc render_route_winds.cc render_terrain.cc render_top_layers.cc render_top_margin.cc render_winds.cc render_xsect_control.cc render_xsect_grids.cc render_xsect_line_contours.cc render_xsect_margins.cc render_xsect_products.cc render_xsect_top_layers.cc render_xsect_winds.cc shmem_init.cc xview_file_access.cc $(DISTDIR)/
+	$(COPY_FILE) --parents Args.hh GuiManager.hh Cdraw_P.hh Cgui_P.hh Cimages_P.hh Croutes_P.hh Csyprod_P.hh Cterrain_P.hh FieldTableItem.hh HorizWidget.hh LatLonBox.hh LegacyParams.hh Lucid.hh MapMenuItem.hh MetRecord.hh Params.hh ProdMenuItem.hh Product.hh ProductMgr.hh RenderContext.hh ScaledLabel.hh SiiPalette.hh SymprodRender.hh SymprodRenderObj.hh TimeControl.hh TimeList.hh VertWidget.hh VertWindow.hh VlevelManager.hh WayPts.hh WindMenuItem.hh WorldPlot.hh XyBox.hh ZoomMenuItem.hh cidd.h cidd_colorscales.h cidd_contours.h cidd_data_io.h cidd_dpd.h cidd_funcs.h cidd_layers.h cidd_legend.h cidd_macros.h cidd_maps.h cidd_movies.h cidd_params.h cidd_products.h cidd_structs.h cidd_windows.h cidd_winds.h $(DISTDIR)/
+	$(COPY_FILE) --parents Args.cc GuiManager.cc Cdraw_P.cc Cgui_P.cc Cimages_P.cc Croutes_P.cc Csyprod_P.cc Cterrain_P.cc FieldTableItem.cc HorizWidget.cc LatLonBox.cc LegacyParams.cc Lucid.cc Main.cc MapMenuItem.cc MetRecord.cc Params.cc ProdMenuItem.cc Product.cc ProductMgr.cc RenderContext.cc ScaledLabel.cc SymprodRender.cc SymprodRenderObj.cc TimeControl.cc TimeList.cc VertWidget.cc VertWindow.cc VlevelManager.cc WayPts.cc WindMenuItem.cc WorldPlot.cc XyBox.cc ZoomMenuItem.cc cidd_coords.cc cidd_font.cc cidd_init.cc cidd_remote_commands.cc cidd_reset.cc contours.cc graphic_canvas_events.cc graphic_canvas_events_bkwd.cc graphic_compute.cc graphic_cross_section.cc graphic_dump_image.cc graphic_manage.cc graphic_margin_events.cc graphic_panel.cc graphic_reset.cc graphic_resize.cc graphic_xsect_canvas_events.cc graphic_xsect_resize.cc graphic_zoom.cc gui_destroy.cc gui_label_frame.cc gui_modify.cc movie_control.cc movie_frame_retrieve.cc movie_frame_save.cc process_args.cc render_azimuths.cc render_bottom_margin.cc render_cart_grid.cc render_cbar.cc render_click_marks.cc render_distorted_grid.cc render_filled_contours.cc render_filled_image.cc render_ht_sel.cc render_left_margin.cc render_legends.cc render_line_contours.cc render_margins.cc render_movie_frame.cc render_overlays.cc render_polar_grid.cc render_products.cc render_range_rings.cc render_right_margin.cc render_route_winds.cc render_terrain.cc render_top_layers.cc render_top_margin.cc render_winds.cc render_xsect_control.cc render_xsect_grids.cc render_xsect_line_contours.cc render_xsect_margins.cc render_xsect_products.cc render_xsect_top_layers.cc render_xsect_winds.cc shmem_init.cc xview_file_access.cc $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -3464,141 +3460,6 @@ TimeControl.o: TimeControl.cc TimeControl.hh \
 
 TimeList.o: TimeList.cc TimeList.hh
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o TimeList.o TimeList.cc
-
-TimePlot.o: TimePlot.cc TimePlot.hh \
-		cidd_macros.h \
-		cidd_colorscales.h \
-		TimeList.hh \
-		cidd.h \
-		$(HOME)/lrose/include/dataport/port_types.h \
-		$(HOME)/lrose/include/dataport/bigend.h \
-		$(HOME)/lrose/include/dataport/swap.h \
-		$(HOME)/lrose/include/toolsa/mem.h \
-		$(HOME)/lrose/include/toolsa/membuf.h \
-		$(HOME)/lrose/include/toolsa/globals.h \
-		$(HOME)/lrose/include/toolsa/os_config.h \
-		$(HOME)/lrose/include/toolsa/str.h \
-		$(HOME)/lrose/include/toolsa/ansi.h \
-		$(HOME)/lrose/include/toolsa/pmu.h \
-		$(HOME)/lrose/include/toolsa/procmap.h \
-		$(HOME)/lrose/include/toolsa/http.h \
-		$(HOME)/lrose/include/toolsa/HttpURL.hh \
-		$(HOME)/lrose/include/toolsa/URL.hh \
-		$(HOME)/lrose/include/toolsa/pjg.h \
-		$(HOME)/lrose/include/toolsa/pjg_types.h \
-		$(HOME)/lrose/include/toolsa/pjg_flat.h \
-		$(HOME)/lrose/include/toolsa/Path.hh \
-		$(HOME)/lrose/include/toolsa/DateTime.hh \
-		$(HOME)/lrose/include/toolsa/DeltaTime.hh \
-		$(HOME)/lrose/include/toolsa/udatetime.h \
-		$(HOME)/lrose/include/toolsa/sockutil.h \
-		$(HOME)/lrose/include/toolsa/servmap.h \
-		$(HOME)/lrose/include/toolsa/utim.h \
-		$(HOME)/lrose/include/toolsa/umisc.h \
-		$(HOME)/lrose/include/toolsa/port.h \
-		$(HOME)/lrose/include/toolsa/ushmem.h \
-		$(HOME)/lrose/include/toolsa/uusleep.h \
-		$(HOME)/lrose/include/toolsa/ucopyright.h \
-		$(HOME)/lrose/include/toolsa/xdru.h \
-		$(HOME)/lrose/include/Spdb/StationLoc.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_typedefs.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_typedefs_32.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_typedefs_64.hh \
-		$(HOME)/lrose/include/Mdv/DsMdvx.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx.hh \
-		$(HOME)/lrose/include/toolsa/TaFile.hh \
-		$(HOME)/lrose/include/toolsa/file_io.h \
-		$(HOME)/lrose/include/toolsa/heartbeat.h \
-		$(HOME)/lrose/include/toolsa/MemBuf.hh \
-		$(HOME)/lrose/include/Mdv/MdvxTimeList.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_enums.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_constants.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_read.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_write.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_timelist.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_print.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_BE.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_xml.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_ncf.hh \
-		$(HOME)/lrose/include/Mdv/Mdvx_vsect.hh \
-		$(HOME)/lrose/include/didss/DsURL.hh \
-		$(HOME)/lrose/include/toolsa/ThreadSocket.hh \
-		$(HOME)/lrose/include/toolsa/Socket.hh \
-		$(HOME)/lrose/include/toolsa/SockUtil.hh \
-		$(HOME)/lrose/include/Mdv/MdvxField.hh \
-		$(HOME)/lrose/include/Mdv/MdvxVsectLut.hh \
-		$(HOME)/lrose/include/Mdv/MdvxProj.hh \
-		$(HOME)/lrose/include/euclid/PjgMath.hh \
-		$(HOME)/lrose/include/euclid/Pjg.hh \
-		$(HOME)/lrose/include/euclid/PjgTypes.hh \
-		$(HOME)/lrose/include/euclid/sincos.h \
-		$(HOME)/lrose/include/euclid/PjgAzimEquidistMath.hh \
-		$(HOME)/lrose/include/euclid/PjgPolarRadarMath.hh \
-		$(HOME)/lrose/include/euclid/PjgAlbersMath.hh \
-		$(HOME)/lrose/include/euclid/PjgLambertAzimMath.hh \
-		$(HOME)/lrose/include/euclid/PjgLambertConfMath.hh \
-		$(HOME)/lrose/include/euclid/PjgLatlonMath.hh \
-		$(HOME)/lrose/include/euclid/PjgPolarStereoMath.hh \
-		$(HOME)/lrose/include/euclid/PjgObliqueStereoMath.hh \
-		$(HOME)/lrose/include/euclid/PjgMercatorMath.hh \
-		$(HOME)/lrose/include/euclid/PjgTransMercatorMath.hh \
-		$(HOME)/lrose/include/euclid/PjgVertPerspMath.hh \
-		$(HOME)/lrose/include/Mdv/MdvxRemapLut.hh \
-		$(HOME)/lrose/include/Fmq/RemoteUIQueue.hh \
-		$(HOME)/lrose/include/Fmq/DsFmq.hh \
-		$(HOME)/lrose/include/Fmq/Fmq.hh \
-		$(HOME)/lrose/include/toolsa/compress.h \
-		$(HOME)/lrose/include/Fmq/FmqDeviceFile.hh \
-		$(HOME)/lrose/include/Fmq/FmqDevice.hh \
-		$(HOME)/lrose/include/Fmq/FmqDeviceShmem.hh \
-		$(HOME)/lrose/include/Fmq/DsFmqMsg.hh \
-		$(HOME)/lrose/include/dsserver/DsServerMsg.hh \
-		$(HOME)/lrose/include/didss/DsMessage.hh \
-		$(HOME)/lrose/include/didss/ds_message.h \
-		Params.hh \
-		$(HOME)/lrose/include/tdrp/tdrp.h \
-		$(HOME)/lrose/include/tdrp/tdrp_p.h \
-		$(HOME)/lrose/include/tdrp/tdrpbuf.h \
-		$(HOME)/lrose/include/tdrp/tdrp_obsolete.h \
-		$(HOME)/lrose/include/rapformats/coord_export.h \
-		cidd_structs.h \
-		MetRecord.hh \
-		LatLonBox.hh \
-		WayPts.hh \
-		cidd_data_io.h \
-		Product.hh \
-		Csyprod_P.hh \
-		$(HOME)/lrose/include/Spdb/DsSpdbThreaded.hh \
-		$(HOME)/lrose/include/Spdb/DsSpdb.hh \
-		$(HOME)/lrose/include/Spdb/Spdb.hh \
-		$(HOME)/lrose/include/Spdb/Product_defines.hh \
-		$(HOME)/lrose/include/Spdb/Spdb_typedefs.hh \
-		$(HOME)/lrose/include/Spdb/DsSpdbMsg.hh \
-		SymprodRender.hh \
-		$(HOME)/lrose/include/Spdb/Symprod.hh \
-		$(HOME)/lrose/include/Spdb/Symprod_typedefs.hh \
-		RenderContext.hh \
-		$(HOME)/lrose/include/qtplot/ColorMap.hh \
-		cidd_winds.h \
-		cidd_contours.h \
-		cidd_movies.h \
-		cidd_maps.h \
-		cidd_products.h \
-		cidd_layers.h \
-		Croutes_P.hh \
-		cidd_windows.h \
-		cidd_legend.h \
-		cidd_funcs.h \
-		ProductMgr.hh \
-		$(HOME)/lrose/include/dsserver/DmapAccess.hh \
-		$(HOME)/lrose/include/dsserver/DmapMessage.hh \
-		SymprodRenderObj.hh \
-		$(HOME)/lrose/include/Spdb/SymprodObj.hh \
-		$(HOME)/lrose/include/rapformats/station_reports.h \
-		$(HOME)/lrose/include/rapformats/metar_decode.h \
-		$(HOME)/lrose/include/rapformats/metar.h \
-		$(HOME)/lrose/include/rapformats/nws_oso_local.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o TimePlot.o TimePlot.cc
 
 VertWidget.o: VertWidget.cc $(HOME)/lrose/include/toolsa/toolsa_macros.h \
 		$(HOME)/lrose/include/toolsa/uusleep.h \
