apps/radar/Lucid - removing Makefile.qmake from git check in

--- a/.gitignore
+++ b/.gitignore
@@ -503,6 +503,7 @@ codebase/apps/radar/src/NexradPowerStats/NexradPowerStats
 codebase/apps/radar/src/NoiseMon/NoiseMon
 codebase/apps/radar/src/Lucid/Lucid
 codebase/apps/radar/src/Lucid/moc_*
+codebase/apps/radar/src/Lucid/Makefile.qmake
 codebase/apps/radar/src/PartRain/PartRain
 codebase/apps/radar/src/PidZdrStats/PidZdrStats
 codebase/apps/radar/src/PointingCpCompute/PointingCpCompute
