made change to look for LROSE under /usr/local

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -113,10 +113,7 @@ message("X11_LIB_DIR: ${X11_LIB_DIR}")
 message("HDF5_INSTALL_PREFIX: ${HDF5_INSTALL_PREFIX}")
 message("HDF5_C_INCLUDE_DIR: ${HDF5_C_INCLUDE_DIR}")
 
-# If user did not provide CMAKE_INSTALL_PREFIX, use ~/lrose
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/lrose" CACHE PATH "..." FORCE)
-endif()
+set(CMAKE_INSTALL_PREFIX /usr/local/lrose CACHE PATH "..." FORCE)
 message("CMAKE_INSTALL_PREFIX is ${CMAKE_INSTALL_PREFIX}")
 
 # Function for creating TDRP Params.cc and Params.hh files
