--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -112,8 +112,10 @@ message("X11_X11_INCLUDE_PATH: ${X11_X11_INCLUDE_PATH}")
 message("X11_LIB_DIR: ${X11_LIB_DIR}")
 message("HDF5_INSTALL_PREFIX: ${HDF5_INSTALL_PREFIX}")
 message("HDF5_C_INCLUDE_DIR: ${HDF5_C_INCLUDE_DIR}")
-
-set(CMAKE_INSTALL_PREFIX /usr/local/lrose CACHE PATH "..." FORCE)
+# If user did not provide CMAKE_INSTALL_PREFIX, use ~/lrose
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/lrose" CACHE PATH "..." FORCE)
+endif()
 message("CMAKE_INSTALL_PREFIX is ${CMAKE_INSTALL_PREFIX}")
 
 # Function for creating TDRP Params.cc and Params.hh files
