apps/didss - cleaning up Makefiles

--- a/codebase/apps/didss/src/copy_mh_tape/Makefile
+++ b/codebase/apps/didss/src/copy_mh_tape/Makefile
@@ -39,7 +39,7 @@ LOC_INCLUDES =
 LOC_CFLAGS =
 LOC_LDFLAGS =
 LOC_LIBS = \
-	-ltitan -ltoolsa -lpthread -lbz2 -lz \
+	-ltoolsa -lpthread -lbz2 -lz \
 	-lm
 
 MODULE_TYPE=program
