apps/mdv_utils - cleaning up Makefiles

--- a/codebase/apps/mdv_utils/src/check_mdv/Makefile
+++ b/codebase/apps/mdv_utils/src/check_mdv/Makefile
@@ -39,13 +39,13 @@ LOC_INCLUDES =
 LOC_CFLAGS = -g
 LOC_LDFLAGS =
 LOC_LIBS = \
-	-ltitan -lmdv -lrapformats -ltoolsa -lpthread \
+	-ltitan -lMdv -lrapformats -ltoolsa -lpthread \
 	-ldataport -lbz2 -lz -lm
 
 HDRS =  
 SRCS =  check_mdv.c 
 
-#
+#	
 # standard targets
 #
 
