Adding Tstorms2NetCDF to cmake build

--- a/codebase/apps/scripts/src/CMakeLists.txt
+++ b/codebase/apps/scripts/src/CMakeLists.txt
@@ -32,6 +32,7 @@ install(PROGRAMS psinfo2 DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS pull_files_ftp.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS push_files_ftp.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS push_spdb_files_ftp.py DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(PROGRAMS runas DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_baks DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_CMakeLists DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_core DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
