--- a/codebase/apps/titan/src/CMakeLists.txt
+++ b/codebase/apps/titan/src/CMakeLists.txt
@@ -48,6 +48,7 @@ add_subdirectory (TrackProps)
 add_subdirectory (Tracks2Ascii)
 add_subdirectory (TstormTemporalSmooth)
 add_subdirectory (Tstorms2GenPoly)
+add_subdirectory (Tstorms2NetCDF)
 add_subdirectory (Tstorms2Shapefile)
 add_subdirectory (Tstorms2Spdb)
 add_subdirectory (Tstorms2Xml)
